# niwpodcastdownloader

./: CHANGELOG  CMakeLists.txt  FAQ  HACKING  ProjectHome.md  README  STRUCTURE
src/: CMakeLists.txt  client.cpp  database.h  downloaditem.cpp  downloaditem.h  podcast.cpp  podcast.h  podcastepisode.cpp  podcastepisode.h  settingsmanager.cpp
tags/Release-1.0/: CHANGELOG
tags/Release-1.0.1/: AUTHORS  CHANGELOG  README
tags/Release-1.0.1/src/: client.cpp  platform.h
tags/Release-1.0.2/: INSTALL
tags/Release-1.0.2/src/: downloaditem.cpp  episodelisting.cpp  main.cpp  podcastepisode.cpp
tags/Release-1.0.3/: CHANGELOG  Doxyfile
tags/Release-1.0.3/src/: CMakeLists.txt  client.cpp  opts.cpp  podcast.cpp  podcast.h  podcastepisode.cpp  settingsmanager.cpp
tags/Release-1.0/src/: configure.cpp.cmake  platform.cpp  podcastlistingsparser.cpp
tags/Release-1.1/: CHANGELOG  CMakeLists.txt  INSTALL  README  STRUCTURE
tags/Release-1.1/src/: CMakeLists.txt  downloaditem.cpp  downloaditem.h  podcast.h  podcastepisode.cpp  podcastepisode.h  podcastlistingsparser.cpp  podcastlistingsparser.h  settingsmanager.cpp  settingsmanager.h
trunk/: CHANGELOG  CMakeLists.txt  HACKING  README
trunk/src/: client.cpp  client.h  configure.h  database.cpp  database.h  downloaditem.cpp  downloaditem.h  episodelisting.cpp  episodelisting.h  opts.cpp  opts.h  podcast.cpp  podcast.h  podcastepisode.cpp  podcastlistingsparser.cpp  settingsmanager.cpp  settingsmanager.h
